# disk-image-checker

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
disk_image_checker/: __main__.py  base.py  cli.py
diskimagechecker/: __main__.py  cli.py
tests/: test_base.py
