[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diskimagechecker"
authors = [
  { name = "Jay Faulkner", email = "jay@jvf.cc" },
]
description = "Simple CLI frontend to image inspector in oslo.utils"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "click",
  "oslo.utils>=7.3.0"
]
version = "0.1"